[package]
name = "smallring"
version = "0.1.4"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "High-performance ring buffer with automatic stack/heap optimization | 高性能环形缓冲区，支持栈/堆自动优化"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/smallring"
homepage = "https://github.com/ShaoG-R/smallring"
documentation = "https://docs.rs/smallring"
keywords = ["spsc", "ringbuffer", "lockfree", "queue", "concurrent"]
categories = ["concurrency", "data-structures"]
readme = "README.md"
rust-version = "1.87"

[dependencies]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
rtrb = "0.3.2"

[[bench]]
name = "spsc_benchmark"
harness = false
